--- a/wp-content/themes/boss-child/src/scss/partials/_base.scss
+++ b/wp-content/themes/boss-child/src/scss/partials/_base.scss
@@ -1,3 +1,8 @@
+// test - remove me!
+.bb-slider-container .title {
+	text-shadow: 0 0 4px rgba(color('black'), 0.5);
+}
+
 // html {
 // 	font-size: 62.5%; 
 // }
